--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@storybook/addon-docs": "^5.2.8",
     "@storybook/addon-knobs": "^5.2.8",
     "@svgr/webpack": "^4.3.3",
+    "json-loader": "^0.5.7",
     "storybook-chromatic": "^3.4.1",
     "styled-components": "^4.2.0",
     "styled-normalize": "^8.x.x",
